# smallcaps

./: LICENSE  SmallCaps.hs  lesscase.hs  smallcaps.cabal
Data/: Config.hs  LaTeX.hs  StopState.hs
Text/: ConfigParser.hs  DocumentParser.hs  LaTeXParser.hs  PrintableParser.hs  TeXLaTeXParser.hs  TeXParser.hs
doc/: lesscase.markdown
man/man1/: lesscase.1  twocase.1
src/lesscase/: lesscase.hs
src/smallcaps/: SmallCaps.hs
src/smallcaps/Data/: Config.hs  LaTeX.hs  TeX.hs
src/smallcaps/SmallCaps/: Config.hs  ConfigParser.hs  DocumentParser.hs  LaTeX.hs  LaTeXParser.hs  PrintableParser.hs  TeX.hs  TeXLaTeXParser.hs  TeXParser.hs
src/smallcaps/Text/: ConfigParser.hs  DocumentParser.hs  LaTeXParser.hs  PrintableParser.hs  SmallCaps.hs  TeXLaTeXParser.hs  TeXParser.hs
src/smallcaps/Text/SmallCaps/: Config.hs  ConfigParser.hs  DocumentParser.hs  LaTeX.hs  LaTeXParser.hs  PrintableParser.hs  TeX.hs  TeXLaTeXParser.hs  TeXParser.hs
src/test/: Tests.hs  configparser.hs  documentparser.hs  inputfiles.hs  printableparser.hs  smallcaps.hs  texlatexparser.hs  texparser.hs
src/twocase/: twocase.hs
