name:                smallcaps
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.1.0
synopsis:            A library and a program for preceding capital letters in LaTeX files with \small
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@gmx.net
category:            Text
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:    src/smallcaps
  exposed-modules:   SmallCaps
                     Data.TeX
                     Data.LaTeX
                     Data.Config
                     Text.TeXParser
                     Text.LaTeXParser
                     Text.TeXLaTeXParser
                     Text.PrintableParser
                     Text.ConfigParser
                     Text.DocumentParser
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     attoparsec   >=0.10  && <0.11,
                     parsec       >=3.1   && <3.2,
                     data-default >=0.5   && <0.6
  default-language:  Haskell2010

executable lesscase
  hs-source-dirs:    src/lesscase
  main-is:           lesscase.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     attoparsec   >=0.10  && <0.11,
                     parsec       >=3.1   && <3.2,
                     data-default >=0.5   && <0.6,
                     directory    >=1.2   && <1.3,
                     filepath     >=1.3   && <1.4,
                     smallcaps    >=0.1   && <0.2
  default-language:  Haskell2010
-- vim: sts=2:sw=2:et:nu:ai
