name:                smallcaps
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.1.2
synopsis:            A library and a program for preceding capital letters in LaTeX files with \small
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@gmx.net
category:            Text
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:    src/smallcaps
  exposed-modules:   SmallCaps
                     Data.TeX
                     Data.LaTeX
                     Data.Config
                     Text.TeXParser
                     Text.LaTeXParser
                     Text.TeXLaTeXParser
                     Text.PrintableParser
                     Text.ConfigParser
                     Text.DocumentParser
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     attoparsec   >=0.10  && <0.11,
                     parsec       >=3.1   && <3.2,
                     data-default >=0.5   && <0.6
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-unused-do-bind

executable lesscase
  hs-source-dirs:    src/lesscase
  main-is:           lesscase.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     attoparsec   >=0.10  && <0.11,
                     data-default >=0.5   && <0.6,
                     directory    >=1.2   && <1.3,
                     filepath     >=1.3   && <1.4,
                     smallcaps    >=0.1   && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite texparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           texparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     attoparsec   >=0.10  && <0.11,
                     smallcaps    >=0.1   && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite texlatexparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           texlatexparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     parsec       >=3.1   && <3.2,
                     smallcaps    >=0.1   && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite configparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           configparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     smallcaps    >=0.1   && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite printableparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           printableparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     data-default >=0.5   && <0.6,
                     smallcaps    >=0.1   && <0.2
  default-language:  Haskell2010
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/ZjMNZHgG5jMXw/smallcaps.git

-- vim: sts=2:sw=2:et:nu:ai
