name:                smallcaps
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.1.0
synopsis:            A library and a program for preceding capital letters in LaTeX files with \small
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@gmx.net
category:            Text
build-type:          Simple
extra-source-files:  src/test/Tests.hs
                     doc/lesscase.markdown
                     man/man1/lesscase.1
cabal-version:       >=1.10

library
  hs-source-dirs:    src/smallcaps
  exposed-modules:   SmallCaps
                     Data.TeX
                     Data.LaTeX
                     Data.Config
                     Text.TeXParser
                     Text.LaTeXParser
                     Text.TeXLaTeXParser
                     Text.PrintableParser
                     Text.ConfigParser
                     Text.DocumentParser
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     attoparsec   >=0.10  && <0.11,
                     parsec       >=3.1   && <3.2,
                     data-default >=0.5   && <0.6,
                     containers   >=0.5   && <0.6,
                     transformers >=0.3   && <0.4,
                     directory    >=1.2   && <1.3,
                     filepath     >=1.3   && <1.4
  default-language:  Haskell2010
  ghc-options:       -Wall

executable lesscase
  hs-source-dirs:    src/lesscase
  main-is:           lesscase.hs
  build-depends:     base         >=4.6   && <4.7,
                     data-default >=0.5   && <0.6,
                     smallcaps    >=0.2   && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite texparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           texparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     attoparsec   >=0.10  && <0.11,
                     smallcaps    >=0.2   && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite texlatexparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           texlatexparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     parsec       >=3.1   && <3.2,
                     smallcaps    >=0.2   && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite inputfiles
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           inputfiles.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     containers   >=0.5   && <0.6,
                     smallcaps    >=0.2   && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite configparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           configparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     data-default >=0.5   && <0.6,
                     smallcaps    >=0.2   && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite printableparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           printableparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     data-default >=0.5   && <0.6,
                     smallcaps    >=0.2   && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite documentparser
  hs-source-dirs:    src/test
  type:              exitcode-stdio-1.0
  main-is:           documentparser.hs
  build-depends:     base         >=4.6   && <4.7,
                     text         >=0.11  && <0.12,
                     data-default >=0.5   && <0.6,
                     smallcaps    >=0.2   && <0.3
  default-language:  Haskell2010
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/ZjMNZHgG5jMXw/smallcaps.git

-- vim: sts=2:sw=2:et:nu:ai
